--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^1.18.9",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
+    "ts-progress": "^0.1.7",
     "typescript": "^3.2.2"
   },
   "devDependencies": {
