--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "ts-progress": "^0.1.7",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "^11.9.5"
