--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.4",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
+    "path": "^0.12.7",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "ts-progress": "^0.1.7",
