--- a/.gitignore
+++ b/.gitignore
@@ -127,5 +127,5 @@ test/*.js
 *.map
 
 src/playground/
-config/locationtypes.mine.json
+config/classifications.mine.json
 config/directories.mine.json
